--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 name: Config9, Loi Corp
 markdown: kramdown
-permalink: /blog/:year/:month/:day/:title
+# permalink: /blog/:year/:month/:day/:title
+permalink: /blog/:title
