--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 name: Config9, Loi Corp
 markdown: kramdown
 # permalink: /blog/:year/:month/:day/:title
-permalink: /blog/:title
+permalink: /:title
+url: http://localhost:4000/
