--- a/_config.yml
+++ b/_config.yml
@@ -2,29 +2,4 @@ name: Config9, Loi Corp
 markdown: kramdown
 # permalink: /blog/:year/:month/:day/:title
 permalink: /:title
-url: http://localhost:4000/
-ads1: '<blockquote>
-        <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
-        <!-- Responsive_ads -->
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-4142190075311515"
-             data-ad-slot="3733539389"
-             data-ad-format="auto"></ins>
-        <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-      </blockquote>'
-
-ads3: '<blockquote>
-        <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
-        <!-- RES_Content2 -->
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-4142190075311515"
-             data-ad-slot="2162987788"
-             data-ad-format="auto"></ins>
-        <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-      </blockquote>'
+url: http://localhost:4000
